refactor index.html to remove errors in css selectors

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="top-bar">
       <ul class="menu align-middle">
         <li class="menu-text align-middle">
-          <a href="index.html"><img src="assets/images/test-map-logo.png" /></a>
+          <a href="index.html"><img src="assets/images/test-map-logo.png" alt="Map-A-Test Logo" /></a>
         </li>
         <li>
           <a href="about.html" target="_blank">About this Project</a>
@@ -66,7 +66,7 @@
 
     <!-- Test Site Information  -->
     <div id="box">
-      <h4 id="title">Sites Near You:</h4>
+      <h4>Sites Near You:</h4>
       <br />
       <div id="site-info-wrapper">
         <!-- empty div to populate with data  -->
@@ -76,14 +76,13 @@
 
     <div id="past-locations">
       <!-- Past Location Buttons  -->
-      <div>
-        <h4 id="title">Your Saved Locations</h4>
+      <h4 >Your Saved Locations</h4>
 
-        <div id="past-location-buttons-div">
+      <div id="past-location-buttons-div">
           <!-- empty div to populate with buttons for past locations  -->
-        </div>
+      </div>
+    </div>
 
-  </div>
 
   <!-- MODAL search box -->
   <div class="reveal" id="my-modal" data-reveal>
@@ -95,7 +94,7 @@
         <br />
         <h2 id="enter-location">- or - <br />Enter it Below:</h2>
 
-        <label>Select Your State
+        <label>Select Your State </label>
           <select id="state">
             <option value="al">Alabama</option>
             <option value="ak">Alaska</option>
@@ -149,11 +148,12 @@
             <option value="wy">Wyoming</option>
 
           </select> <button class="button" id="state-location">Show</button>
-        </label>
+        
 
         <br />
         <label>
-          Search by Zip</label>
+          Search by Zip
+        </label>
 
 
 
@@ -164,6 +164,8 @@
         </div>
       </div>
     </div>
+  </div>
+  
 
 
 
