debug Parseley source map console warning

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
       <ul class="menu">
         <li>
 
-          <div data-parsley-validate class="form">
+          <div class="form">
             <input type="number" placeholder="Search by Zip" id="side-page-input" data-parsley-type="integer"
             data-parsley-length="[5, 5]"/>
           </div>
