correct z-index for info panels on mobile display

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
           <h2>About the Data</h2>
         </div>
 
-        <div class="cell medium-4 float-right">
+        <div class="cell medium-4 float-right" id="test-graphic-button">
           <a href="index.html"><img src="assets/images/test-graphic.png" /></a>
         </div>
 
