correct https error that shows up on deployed link

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
 
     <!-- PARSLEY js -->
-    <script src="http://parsleyjs.org/dist/parsley.js"></script>
+    <script src="https://parsleyjs.org/dist/parsley.js"></script>
     <script src="parsley.min.js"></script>
 
     <!-- FOUNDATION js -->
