adding iman's image to readme

--- a/about.html
+++ b/about.html
@@ -112,7 +112,7 @@
 
         <div class="cell card medium-3 team-info">
           <div class="card-section">
-            <img src="assets/images/test-graphic.png">
+            <img src="assets/images/iman.jpeg">
           </div>
           <div class="card-section">
             <h3>Iman</h3>
